ChangeLog for 2.53.1

//Beta 31
Probably fixed clash between tile warp and warp ring dialogues. 
	( ZoriaRPG, 6th February, 2010 )

//Beta 30
Added fire/animation to the new AGN logo. It's done. Please...No more.
	( ZoriaRPG, 4th February, 2020 )

//Beta 29
Added new splash logo theme, by stk13, resequenced into a shorter loop.
	( ZoriaRPG, 4th February, 2020 )
	
Packaged nom-UPD'd bins; added UPX'd bins to ./upx
Fixed title screen copyright years. They are now automated at compilation.
Added new AGN Splash Screen and Audio
	( ZoriaRPG, 3rd February, 2020 )

//Beta 28
Fixed vine tiles in story scroll; updated qst.dat.
	( ZoriaRPG, 1st February, 2020 )

//Beta 27
Disabled a trace on dustpile creation.
	( ZoriaRPG, 30th January, 2020 )
	
All roomtypes now allow a 'Generic Catchall' set via the menus.
	( ZoriaRPG, 27th January, 2020 )

//Beta 26
The Item 2 and Item 3 counters of subscreen objects are intended
	to stack with counter 0, but someone disabled that to prevent stacking
	values with Life at all times.

	I corrected the issue by making '0' for item2 and item3 an ignored
	field.

	Further, if item 2 == item 1, or item 3 == either item1 or item 2,
		then they will not stack. This will prevent having all
		three at the same ID from tripling, or two or more of the same
		ID from doubling the true count.

	Quests saed in versions < 2.53.1 ignore this.
	( ZoriaRPG, 26th January, 2020 )
Fixed an unintentional fallthrough in switch(itemtype) inside subscr.cpp
	where there is a missing break instruction after all script cases.
	Should someone have added anything after those, then script counters
	would fall through to the newly added counter.
	( ZoriaRPG, 26th January, 2020 )

//Beta 25
Experimentally Allow setting all item pickup flags. None are blocked.
	Unblocked some item pickup flags in ffscript.cpp, that were
	blocked--probably by L or Joe123?--until it causes some old quest
	to break. 
	In quests last saved in 2.50.x Build 32 or lower, it remains blocked.